Fix display on small screens

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -21,6 +21,7 @@ body {
     max-width: 400px;
     width: 100%;
     margin: 0 auto;
+    padding: 5px;
 }
 
 .weather-box {
